# rs

./: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
.github/workflows/: publish.yml  test-build.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: types.ts  unique-id.ts  utils.ts
src/lib/actions/: click-outside.ts
src/lib/components/: index.ts  navbar.svelte  search-bar.svelte  single-script.svelte
src/lib/db/: all-script-set.ts  db.ts
src/lib/init/: initialize.ts
src/lib/rust/: execute-script.ts
src/lib/store/: config-store.ts  index.ts  local-store.ts  use-folder.ts  use-language.ts  use-script.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/config/: +page.svelte
src/routes/edit-scripts/: +page.svelte
src/routes/folders/: +page.svelte
src/routes/languages/: +page.svelte
src/routes/update/: +page.svelte
